src/test/ui/error-codes/E0029-teach.stderr
error[E0029]: only char and numeric types are allowed in range patterns
  --> $DIR/E0029-teach.rs:7:9
   |
LL |         "hello" ..= "world" => {}
   |         ^^^^^^^^^^^^^^^^^^^ ranges require char or numeric types
   |
   = note: start type: &'static str
   = note: end type: &'static str
   = note: In a match expression, only numbers and characters can be matched against a range. This is because the compiler checks that the range is non-empty at compile-time, and is unable to evaluate arbitrary comparison functions. If you want to capture values of an orderable type between two end-points, you can use a guard.

error: aborting due to previous error

For more information about this error, try `rustc --explain E0029`.
